--- a/whyImportant.html
+++ b/whyImportant.html
@@ -23,19 +23,10 @@
 	  padding: 50px;
 	  border: 2px solid white;
 	  text-align: center;
+	  font-size: 20px;
+	  line-height:50px;
       }
 
-      button {
-	  background-color: #bdad8a;
-	  border: none;
-	  padding: 15px 32px;
-	  text-align: center;
-	  text-decoration: none;
-	  display: inline-block;
-	  font-size: 16px;
-	  margin: 4px 2px;
-	  cursor: pointer;
-      }
 
       a {
 	  background-color: orange;
@@ -66,8 +57,8 @@
     
     <h1 id="title">Why my Digital Portfolio is important to me?</h1>
 
-    <p id="text"> This digital portfolio is important to me because it's a good way for me to keep track of my progress, <br> have something
-    to use as reference for future endeavors, and have something to look back on.</p>
+    <p id="text"> 
+    This digital portfolio is important to me because it is a way for me to keep track <br> of my progress throughout the year. With all the assignments and achievements I get I can add to this <br> portfolio. It will help me to have something to use as a reference for future endeavors such <br>  as jobs and anything college related. It is also something I have to look back <br> on and reminisce about my high school years. </p>
   </body>
 
 </html>
