--- a/whyImportant.html
+++ b/whyImportant.html
@@ -1,10 +1,11 @@
 <html>
   <head>
+    <title> Digital Portfolio Importantce </title>
     <style>
 
       #title {
 	  color: white;
-	  background-color: #bf6f2e;
+	  background-color: #9E7251;
 	  height: 50px;
 	  text-align: center;
 	  padding: 50px 0;
@@ -12,13 +13,13 @@
       }
 
       body {
-	  background-color: #ffb375;
+	  background-color: #CCA68A;
 	  color: white;
 	  font-family: Monospace, Courier New;
       }
 
       #text {
-	  background-color: #a15415;
+	  background-color: #73492A;
 	  height: 300px;
 	  padding: 50px;
 	  border: 2px solid white;
@@ -29,7 +30,7 @@
 
 
       a {
-	  background-color: orange;
+	  background-color: #865632;
 	  width: 100%;
 	  border: none;
 	  padding: 15px 32px;
