--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 
     <h3 id="sideNote"> <-- Click the words to navigate!  </h3>
     
-    <img id="flower" src="flower.png" alt="Flower" width="500" height="500">
-    <img id="panda" src="panda.png" alt="Panda" width="200" height="200">
+    <img id="flower" src="images/flower.png" alt="Flower" width="500" height="500">
+    <img id="panda" src="images/panda.png" alt="Panda" width="200" height="200">
 			   
 
     <a id="link" href ="https://github.com/Zoe-yau/zoe-yau.github.io" target="_blank">Click Here to see <br> my Digital Portfolio!</a>
@@ -125,7 +125,7 @@
       <button class="tablinks" onclick="openTab(event, 'Classes')"><a href = "classes.html" target="_blank"> Classes </a></button>
       <button class="tablinks" onclick="openTab(event, 'ISP')"> <a href = "ISP.html" target="_blank"> ISP </a></button>
       <button class="tablinks" onclick="openTab(event, 'Learned')"><a href = "learned.html" target="_blank"> What I&apos;ve learned in CS last year </a></button>
-      <button class="tablinks" onclick="openTab(event, 'FingerPrints')"><a href = "fingerprints.html" target="_blank"> Fingerprints </a></button>
+      <button class="tablinks" onclick="openTab(event, 'CS-II')"><a href = "CS-II/index.html" target="_blank"> CS-II </a></button>
 
     </div>
 
