--- a/index.html
+++ b/index.html
@@ -98,11 +98,18 @@
 	#link {
 	    position: absolute;
 	    right: 26px;
-	    background-color: #E86969;
-	    border: 2px solid white;
 	    padding: 20px;
 	    height: 60px;
 	    margin: 20px;
+	}
+
+	#caption {
+	    position: absolute;
+	    right: 40px;
+	    top: 500px;
+	    color: white;
+	    text-align: center;
+
 	}
 
       </style>
@@ -117,7 +124,8 @@
     <img id="panda" src="images/panda.png" alt="Panda" width="200" height="200">
 			   
 
-    <a id="link" href ="https://github.com/Zoe-yau/zoe-yau.github.io" target="_blank">Click Here to see <br> my Digital Portfolio!</a>
+    <p id="caption"> Click the cat to see my <br> Digital Portfolio github!</p>
+    <a id="link" href ="https://github.com/Zoe-yau/zoe-yau.github.io" target="_blank"><img src="images/githublogo.png" alt="Git" width="200" height="200"></a>
     
     <div class="tab">
       <button class="tablinks" onclick="openTab(event, 'AboutMe')"><a href = "aboutMe.html" target="_blank"> About Me </a></button>
