--- a/CS-II/Projects/Projects.html
+++ b/CS-II/Projects/Projects.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../../css/tabsVertical.css">
     <link rel="stylesheet" href="../../css/header.css">
     
-    <title> Projects </title>
+    <title> Projects Index </title>
     
       <h1 class="header"> Projects </h1>
 
