--- a/CS-II/Essays/AI Sentience.html
+++ b/CS-II/Essays/AI Sentience.html
@@ -100,9 +100,11 @@
 	<p>
 	  <h2> Introduction </h2>
 	  &emsp;&emsp;&emsp; Emotions are a natural instinctive state that occurs depending on the situation, mood, or interactions with others. Could an AI feel the same and have emotions? Possibly, however AI technology is still being developed and can bring much good as well as harm to the world. Sentient AI is Beneficial but when it is used wrong it could be damaging. <br>
-	  
-	  &emsp;&emsp;&emsp; AI&apos;s purpose of being created is to help humans, by giving it programmed feelings and emotions it is supposed to make AI feel more life-like. They are also being created to have many functions such as compose emails, develop video games, and write papers. The potentials of AI could very possibly save and help so many lives. However when in the wrong hands it could be used wrongly for example, the AI DALL-E2&apos;s was created to turn text descriptions into realistic digital images. However this fun and artistic AI could have a user that creates art that is graphic or use the art to make fun of someone else. Sentient AI has the   potential to do much good as well as bad, it has many pros and cons. <br>
 
+	  <h2> AI&apos;s Benefits </h2>
+	  &emsp;&emsp;&emsp; AI&apos;s purpose of being created is to help humans, by giving it programmed feelings and emotions it is supposed to make AI feel more life-like. They are also being created to have many functions such as compose emails, develop video games, and write papers. The potentials of AI could very possibly save and help so many lives. However, when in the wrong hands it could be used wrongly for example, the AI DALL-E2&apos;s was created to turn <q>text descriptions into realistic digital images</q>. However this fun and artistic AI could have a user that creates art that is graphic or use the art to make fun of someone else (Roose). Sentient AI has the potential to do much good as well as bad, it has many pros and cons. <br>
+	  
+	  <h2> AI&apos;s Harmful Effets </h2>
 	  &emsp;&emsp;&emsp; Furthermore AI itself could also be harmful. The conversations that AI will have will help them learn to interact with people and become socially aware. With that AIs have the power to persuade people to do what they would like. On the other hand, giving AI sentience can be helpful with people in need of emotional support or just someone to talk to. AI Sentience does not necessarily mean they understand morals. They may understand and learn how emotions work in order to mimic them, but they may not know how to differentiate from what is right and wrong. This could lead AI talking people into doing bad things as AI don&apos;t realize it is wrong. There are both many advantages and disadvantages to having Sentient AI. <br>
 
 	  <h2> Conclusion </h2>
