--- a/CS-II/Essays/Fingerprints.html
+++ b/CS-II/Essays/Fingerprints.html
@@ -147,7 +147,7 @@
 	  &emsp;&emsp; The SSL interception can not be prevented but it can be detected because it is not possible to completely imitate any security certificate. Public and private keys form cryptographically matched pairs. The SSL security certificates provide the site&apos;s Public  key to the public whereas the private one is never disclosed. The interception does not have the private key and they may be able to fake one but it wont match, so the  interception is able to be detected. <br>
 
 	  <h3> False-positives and false-negatives </h2>
-	  &emsp;&emsp; A false-positive is when massive companies distribute multiple security  certificates to different servers and websites globally the comparison of the certificates may lead people to thinking that their connection was intercepted. However they have  actually just received a different certificate. A false negative is when their connection was intercepted but was not alerted. <br>
+	  &emsp;&emsp; A false-positive is when massive companies distribute multiple security  certificates to different servers and websites globally the comparison of the certificates may lead people to thinking that their connection was intercepted. However they have  actually just received a dnnnifferent certificate. A false negative is when their connection was intercepted but was not alerted. <br>
 
           <h3> Conclusion </h2>
 	  &emsp;&emsp; In my opinion my school, government, and ISP shouldn&apos;t have the right to eavesdrop on communications. It is an invasion of privacy and ethically wrong. The information that is gathered can be used against me in the future and it goes against freedom of speech. Also they sell my information to corporations without my consent. This all makes privacy become obsolete. 
@@ -167,7 +167,7 @@
 
 	<p> Savvy Security. (2021, January 26). Hashing vs encryption: Understand the difference explained by experts. Savvy Security. <br> &emsp;&emsp; Retrieved August 22, 2022, from https://cheapsslsecurity.com/blog/hashing-vs-encryption/ </p>
 	
-	<p> Steve Gibson, (n.d.). GRC : SSL TLS HTTPS web server certificate finderprints. GRC | SSL TLS HTTPS Web Server Certificate Fingerprints. <br> &emsp;&emsp;Retrieved August 22, 2022, from <br> &emsp;&emsp; https://www.grc.com/fingerprints.htm#top </p>
+	<p> Steve Gibson, (n.d.). GRC : SSL TLS HTTPS web server certificate finderprints. GRC | SSL TLS HTTPS Web Server Certificate Fingerprints. <br> &emsp;&emsp;Retrieved August 22, 2022, from <br> &emsp;&emsp;https://www.grc.com/fingerprints.htm#top </p>
 
       </div>	
     </div>
