--- a/CS-II/Essays/Fingerprints.html
+++ b/CS-II/Essays/Fingerprints.html
@@ -52,7 +52,7 @@
 	  padding-left: 56px;
 	  padding-right: 26px;
 	  padding-bottom: 56px;
-	  line-height: 25px;
+	  line-height: 200%;
 	  font-family: "Times New Roman", Times, serif;
 	  font-size: 19px;
 	  letter-spacing: 1px;
@@ -116,7 +116,7 @@
 
     <div class="page">
       <div id="Cover">
-	<p> Fingerprints <br>
+	<p> <b> Fingerprints </b> <br>
 	  Zoe Yau <br>
 	  Allen ISD STEAM Center <br>
 	  Advanced Computer Science II <br>
@@ -133,10 +133,11 @@
 
 	<p>
 	  <h3> HTTPS connection </h2>
-	  &emsp;&emsp; HTTPS is a secure connection for websites that have the purposes of ensuring a user&apos;s security and privacy. HTTPS makes it harder and more limited for people such as the FBI and schools to monitor the activity of users on the internet. In order to get around that they use devices known as HTTPS Proxy Appliances which are a way for people such as the FBI to look into people&apos;s activity on the internet. <br>
+&emsp;&emsp; HTTPS is a secure connection for websites that have the purposes of ensuring a user&apos;s security and privacy. However, HTTPS connection encryptyion growing use has made it harder and more limited for people such as the FBI, schools and others that used <q>traditional network traffic monitoring and filtering</q> (Gibson). In order to get around that they use devices known as HTTPS Proxy Appliances which are a way for people such as the FBI to look into people&apos;s activity on the internet. <br>
 	  
 	  <h3> MITM </h2>
-	  &emsp;&emsp; MITM is a man in the middle attack. It is a term used for a perpetrator positions themselves in a conversation between a user and an application. They do this either to eavesdrop or to impersonate one of the parties making the situation seem like a normal exchange. It is risky because whatever information is obtained by the perpetrator could be used for ill-purposes like identity theft.<br>
+&emsp;&emsp; MITM is a man in the middle attack.It is a term used for <q>when a perpetrator positions themselves in a conversation between a user and an application</q> (Imperva, 2019). They do this either to eavesdrop or to impersonate one of the parties making the situation seem like a normal exchange. It is risky because whatever information is obtained by the perpetrator could be used for ill-purposes like identity theft.<br>
+
 	  <h3> Hash </h2>
 	  &emsp;&emsp; A Hash is a complex mathematical algorithm which carefully processes every single bit of what they <q>digest</q> The essential qualities that make a has a <q>good</q> hash is that it has sensitive and strong detection of anything changed anywhere in a security certificate. In the case of one bit inside the certificate being  changed half of the fingerprint&apos;s hash bits will change as well. <br>
 	  
