--- a/CS-II/Essays/AI Sentience.html
+++ b/CS-II/Essays/AI Sentience.html
@@ -130,7 +130,7 @@
       </div>
     </div>
 
-    <a class="back" href = "essays.html" target="_blank"> Back </a>
+    <a class="back" href = "essays.html" target="_blank"> Back to Essays Index </a>
     
   </body>
 
