--- a/CS-II/Projects/Projects.html
+++ b/CS-II/Projects/Projects.html
@@ -62,8 +62,9 @@
     <div class="tab">
       <a href = "Optimal Sort.html" target="_blank"> Optimal Sort </a>
       <a href = "Business Plan/index.html" target="_blank"> Business Plan </a>
+      <a href = "ISP/index.html" target="_blank"> ISP </a>
+      
     </div>
-
 
     <a class="back" href = "../index.html" target="_blank"> Back to CS-II Index</a>
 
