--- a/CS-II/index.html
+++ b/CS-II/index.html
@@ -38,7 +38,8 @@
           bottom: 0;
           left: 0;
           background-color: #73396D;
-          width: 185px;
+          width: 247px;
+	  border: none;
       }
 
       .tab a:hover {
@@ -87,13 +88,16 @@
 	<a href = "Projects/Projects.html"> Projects Index </a>
 	<a href = "Projects/Optimal Sort.html"> Optimal Sort </a>
 	<a href = "Projects/Business Plan/index.html"> Business Plan </a>
+	<a href = "Projects/ISP/index.html"> ISP </a>
+
       </div>
 
 
     </div>
 
-
-    <a class="back" href = "../index.html" target="_blank"> Back to Index </a>
+    <form>
+      <input class="back" type="button" value="Back" onclick="history.back()">
+    </form>
 
         
     <script>
