--- a/CS-II/Essays/essays.html
+++ b/CS-II/Essays/essays.html
@@ -44,7 +44,9 @@
 	    position: absolute;
 	    bottom: 0;
 	    left: 0;
-	    width: 185px;
+	    width: 247px;
+	    border: none;
+
 	}
 
 
@@ -67,7 +69,9 @@
       <a href = "Decision Making.html" target="_blank"> Decision Making </a>
     </div>
 
-    <a class="back" href = "../index.html" target="_blank"> Back to CS-II Index </a>
+    <form>
+      <input class="back" type="button" value="Back" onclick="history.back()">
+    </form>
 
   </body>
 
