--- a/CS-II/Projects/Projects.html
+++ b/CS-II/Projects/Projects.html
@@ -43,8 +43,8 @@
 	  position: absolute;
 	  bottom: 0;
 	  left: 0;
-	  width: 185px;
-
+	  width: 247px;
+	  border: none;
       }
 
       </style>
@@ -66,7 +66,9 @@
       
     </div>
 
-    <a class="back" href = "../index.html" target="_blank"> Back to CS-II Index</a>
+    <form>
+      <input class="back" type="button" value="Back" onclick="history.back()">
+    </form>
 
   </body>
 
