--- a/classes.html
+++ b/classes.html
@@ -71,8 +71,11 @@
 
       </ol> 
     </div>
-    
-    <a class="back" href = "index.html" target="_blank"> Back </a>
+
+    <form>
+      <input class="back" type="button" value="Back" onclick="history.back()">
+    </form>
+
     
   </body>
 
