--- a/whyImportant.html
+++ b/whyImportant.html
@@ -69,7 +69,9 @@
       &emsp;&emsp; This digital portfolio is important to me because it is a way for me to keep track of my progress throughout the year. With all the assignments and achievements I get, I can add to this portfolio. It will help me to have something to use as a reference for future endeavors such as jobs and anything college related. It is also something I have to look back on and reminisce about my high school years. </p>
     </div>
     
-    <a class="back" href = "index.html" target="_blank"> Back </a>
+    <form>
+      <input class="back" type="button" value="Back" onclick="history.back()">
+    </form>
     
   </body>
 
