--- a/CS-II/Essays/essays.html
+++ b/CS-II/Essays/essays.html
@@ -44,7 +44,7 @@
 	    position: absolute;
 	    bottom: 0;
 	    left: 0;
-	    width: 247px;
+	    width: 185px;
 	    border: none;
 
 	}
@@ -69,9 +69,7 @@
       <a href = "Decision Making.html" target="_blank"> Decision Making </a>
     </div>
 
-    <form>
-      <input class="back" type="button" value="Back" onclick="history.back()">
-    </form>
+    <a class="back" href = "../../index.html" target="_blank"> Back to home Index </a>
 
   </body>
 
