--- a/CS-II/Projects/Business Plan/index.html
+++ b/CS-II/Projects/Business Plan/index.html
@@ -129,7 +129,7 @@
       </div>
 
 
-    <a class="back" href = "../Projects.html" target="_blank"> Back to Projects Index </a>
+    <a class="back" href = "../../../index.html" target="_blank"> Back to Home Index </a>
 
   </body>
 
