--- a/CS-II/Projects/ISP/Journal.html
+++ b/CS-II/Projects/ISP/Journal.html
@@ -36,7 +36,7 @@
 	    border: 4px solid #A2D6DC;
 	}
 	
-	#page {
+	.page {
 	    padding-left: 50px;
 	    line-height: 50px;
 	    font-family: Monospace, Courier New;
@@ -75,11 +75,50 @@
 
       </div>
 
+            <div class="content">
+	<div class="page">
+	  <p class="date"><b> 16-Jan-2023 </p></b>
+
+	  <h3> Technical Challenges </h3>
+	  <li> We still have the same technical challenges with the design and layout of the app. However, this has to do with a scheduling issue, we just have not have the time to meet and discuss. The other issues that I am facing is with the back end. The concept of our app is a bit challenging and will take some more research for me to know how to contribute to the programming. </li>
+	  <br>
+	  
+	  <h3> Scheduling Challenges</h3>
+	  <li> We are having many scheduling challengs. For me personally, I have been busy and unable to attened anything we try to set up. I know we all do many after school clubs and have out of school activities which makes it challenging to find free time. However, the sooner we can get together and figure everything out the better.  </li>
+	  <br>
+
+	  <h3> Interpersonal Challenges </h3>
+	  <li> We have resolved our previous issue of trying to figure out roles. Currently there are no challenges or disagreements that I am aware of and everything seems to be operating smoothly. As it is only the beginning more challengs may appear along the way. </li>
+	  <br>
+
+	</div>
+      </div>
+
 
       <div class="content">
-	<div id="page">
+	<div class="page">
+	  <p class="date"><b> 11-Jan-2023 </p></b>
+
+	  <h3> Technical Challenges </h3>
+	  <li> The technical challenges that I am currently facing is figuring out a design lay out for our app. With multiple people working on the app there is bound to be disagreements. The issues that we are facing is not knowing where to start. We are unsure of what color, theme, and font to go with. We also need to figure out the amount of pages and what kind of pages we want on it. If we are productive and decisive we can solve this issue quickly and create an enticing and inviting app. </li>
+	  <br>
+	  
+	  <h3> Scheduling Challenges</h3>
+	  <li> We have such a large groups, so there may be issues between communication and scheduling conflicts. We have created a group chat with everyone and are figuring out ways to have team meetings. However, scheduling meetings can be hard because everyone has multiple activities going on and the timing of the meetings may not work with their scedule. If we can find ways to create a set scheudle that works for everyone we can be productive and create a successful output. </li> 
+	  <br>
+
+	  <h3> Interpersonal Challenges </h3>
+	  <li> We are currently working on trying to assign roles to everyone. It is a bit challenging as we have such a big group, it is hard for to figure out what everyone wants to do. A challenge that we have faced is some people want to do the same role as another person or some people want multiple roles or are unsure of what they want at all. In the end, we have come to the conclusion that there will be overlap in roles and multiple people will have the same or similar jobs. </li>
+	  <br>
+
+	</div>
+      </div>
+
+
+      <div class="content">
+	<div class="page">
 	  <p class="date"><b> 2-Jan-2023 </p></b>
-	  <ul>
+
 	    <h3>(Software) Development Engineer: </h3>
 	    <li> A software engineer would have to have a solid understanding of computer science. The software engineer&apos;s job would consist of developing the programs, debugging, and testing code. Personally, I would be able to learn and gain a better understanding of programming. If I am to do this job, I would have to do more learning and research in order to reach my fullest potential in this role. </li>
 	    <br>
@@ -100,13 +139,11 @@
 	    <li> A Release Engineer is someone who makes sure that the programs are built and released without issues. They are the ones that link the different applications together through code. Similar to the QA engineer, release engineers make sure that the operation is meeting the standard of the team and the market. I would not know how to do this job, but I am able to learn how to. This role would give me the opportunity to deepen my understanding for programming. </li>
 	    <br>
 
-	  </ul>
-
 	</div>
       </div>
-      
+
 	
-    <a class="back" href = "../Projects.html" target="_blank"> Back </a>
+    <a class="back" href = "index.html" target="_blank"> Back </a>
 
   </body>
 
