--- a/CS-II/Projects/Projects.html
+++ b/CS-II/Projects/Projects.html
@@ -43,7 +43,7 @@
 	  position: absolute;
 	  bottom: 0;
 	  left: 0;
-	  width: 247px;
+	  width: 185px;
 	  border: none;
       }
 
@@ -66,9 +66,7 @@
       
     </div>
 
-    <form>
-      <input class="back" type="button" value="Back" onclick="history.back()">
-    </form>
+    <a class="back" href = "../../index.html" target="_blank"> Back to home Index </a>
 
   </body>
 
