--- a/CS-II/index.html
+++ b/CS-II/index.html
@@ -95,10 +95,7 @@
 
     </div>
 
-    <form>
-      <input class="back" type="button" value="Back" onclick="history.back()">
-    </form>
-
+    <a class="back" href = "../index.html" target="_blank"> Back to home Index </a>
         
     <script>
 
