--- a/ISP.html
+++ b/ISP.html
@@ -128,9 +128,8 @@
       <p> &emsp;&emsp; The overall design and the idea of the game went well. However, we origianlly wanted to have more contestants but because of the time limit we were only able to draw 6. Also in the game initially we wanted to have only 3 contestants to be options but we eventually changed that to all because it gave the game a variety of choices making it more fun. Overall, we had a really great time getting to collaborate and create an awesome game! </p>
     </div>
 
-    <form>
-      <input class="back" type="button" value="Back" onclick="history.back()">
-    </form>
+    <a class="back" href = "index.html" target="_blank"> Back to home Index </a>
+    
 
     <script>
       function openTab(evt, tabName) {
