--- a/aboutMe.html
+++ b/aboutMe.html
@@ -63,9 +63,7 @@
     </p>
     </div>
 
-    <form>
-      <input class="back" type="button" value="Back" onclick="history.back()">
-    </form>
+    <a class="back" href = "index.html" target="_blank"> Back to home Index </a>
     
   </body>
   
