--- a/classes.html
+++ b/classes.html
@@ -72,10 +72,7 @@
       </ol> 
     </div>
 
-    <form>
-      <input class="back" type="button" value="Back" onclick="history.back()">
-    </form>
-
+    <a class="back" href = "index.html" target="_blank"> Back to home Index </a>
     
   </body>
 
