--- a/CS-II/Projects/ISP/Journal.html
+++ b/CS-II/Projects/ISP/Journal.html
@@ -19,7 +19,6 @@
       	.header {
 	    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	    background-image: linear-gradient(90deg, #38C6BD,  #FACDB5);
-
 			      
 	}
 
@@ -38,6 +37,7 @@
 	
 	.page {
 	    padding-left: 50px;
+	    padding-right: 50px;
 	    line-height: 50px;
 	    font-family: Monospace, Courier New;
 	    font-size: 15px;
@@ -76,6 +76,64 @@
       </div>
 
             <div class="content">
+	<div class="page">
+	  <p class="date"><b> 13-Feb-2023 </p></b>
+
+	  <h3> Technical Challenges </h3>
+
+	  <li> Rather than techincal issues, we are have a lot that we need to get done. For starters fixing the app layout, currently there are three pages: the map, settings, and a disaster status page. However, the settings and disaster page is blank or have random words on it. Some good news is that the software engineers were able to create place markers on the map. We have made a lot of progress but still have far to go. </li>
+	  <br>
+	  
+	  <h3> Scheduling Challenges</h3>
+	  <li> We have been communicating much better through our messages group chat. Many of us have lunch at STEAM on B days, so we have started using that lunch time to work on the project. We have been able to talk through the issues of the project and figure out what we want to do next. </li>
+	  <br>
+
+	  <h3> Interpersonal Challenges </h3>
+	  <li> Currently, we are still undecided on color themes, logo designs, and the style of our app. We have two logo designs and disagree on which one we want as the logo. I think to settle the issue we should take a vote. Other than this disagreement the team is working well together. </li>
+	  <br>
+
+	</div>
+      </div>
+
+      <div class="content">
+	<div class="page">
+	  <p class="date"><b> 05-Feb-2023 </p></b>
+
+	  <h3> Technical Challenges </h3>
+	  <li> This week we were able to set up the project on xcode for many of the members in our group. For me at first I had issues with my computer and not having enough storage, but I was able to delete some items and easily fix this proble,. When cloning the app from git hub there were inital problems with the maps we were using in the app. However, we were able to fix this problem because we found that there were issues with the netrc file we created before cloning the project. We were also able to decide on a logo, but we need to change colors. </li>
+	  <br>
+	  
+	  <h3> Scheduling Challenges</h3>
+	  <li> We have a discord server where the group meets to work together on the project. We also have a messages group chat and an email chain where we are able to communicate. We have been working together well and collaborating without many issues. </li>
+	  <br>
+
+	  <h3> Interpersonal Challenges </h3>
+	  <li> There aren't many issues within the group. Everyone is doing their role and working hard to create a succesful app. </li>
+	  <br>
+
+	</div>
+      </div>
+
+      <div class="content">
+	<div class="page">
+	  <p class="date"><b> 23-Jan-2023 </p></b>
+
+	  <h3> Technical Challenges </h3>
+	  <li> The issues that we have faced this week is problems with git hub. Unfortunately our README on our github disappeared. However, this issue has a simple fix, we can simply remake it. Although in the future if we have more issues wit our github it may not be so easy to redo. </li>
+	  <br>
+	  
+	  <h3> Scheduling Challenges</h3>
+	  <li> Conitinuing with the previous journal entries we have not been able to schedule meet ups. This has to do with all of us being very busy. These upcoming months are going to be busy with test preparations or end the year exams. Finding time to have a meet up is proving to be difficut. However, we will be able to find away to have a proper meet up. </li>
+	  <br>
+
+	  <h3> Interpersonal Challenges </h3>
+	  <li> There are currently no interpersonal challenges that we are facing. Everyone is getting along and working together well. I doubt there will be many issues that will arise. </li>
+	  <br>
+
+	</div>
+      </div>
+
+      <div class="content">
 	<div class="page">
 	  <p class="date"><b> 16-Jan-2023 </p></b>
 
