--- a/learned.html
+++ b/learned.html
@@ -37,10 +37,9 @@
 
       }
 
-
       #rose {
 	  position: absolute;
-	  top: 20px;
+	  top: -10px;
 	  left: 36px;
       }
 
@@ -58,7 +57,7 @@
     
     <h1 class="header">What I've learned in CS last year</h1>
 
-    <img id="rose" src="images/pinkRose.png" alt="rose" width="135" height="135">
+    <img id="rose" src="images/iceBear.png" alt="rose" width="235" height="235">
 
     <div id="textBackground">
     <p id="text">
