--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       .cover {
 	  opacity: 0.5;
 	  height: 300px;
-	  width: 115%;
+	  width: 104%;
       }
 
       body {
@@ -166,9 +166,11 @@
 	<img src="images/photoGallery/photo4.jpg" style="width:100%">
 	<img src="images/photoGallery/photo5.jpg" style="width:100%">
 	<img src="images/photoGallery/photo7.jpg" style="width:100%">
-	<img src="images/photoGallery/photo6.jpg" style="width:100%">
 	<img src="images/photoGallery/photo19.jpg" style="width:100%">
-	<img src="images/photoGallery/photo16.JPG" style="width:100%">	
+	<img src="images/photoGallery/photo6.jpg" style="width:100%">
+	<img src="images/photoGallery/photo38.jpeg" style="width:100%">
+	<img src="images/photoGallery/photo34.jpeg" style="width:100%">
+	<img src="images/photoGallery/photo36.jpeg" style="width:100%">
       </div>
 
       <div class="column">
@@ -179,6 +181,8 @@
 	<img src="images/photoGallery/photo17.JPG" style="width:100%">
 	<img src="images/photoGallery/photo10.JPG" style="width:100%">
 	<img src="images/photoGallery/photo13.jpg" style="width:100%">
+	<img src="images/photoGallery/photo35.jpeg" style="width:100%">
+	<img src="images/photoGallery/photo39.jpg" style="width:100%">
       </div>
 
       <div class="column">
@@ -191,7 +195,10 @@
 	<img src="images/photoGallery/photo29.JPG" style="width:100%">	
 	<img src="images/photoGallery/photo32.JPG" style="width:100%">
 	<img src="images/photoGallery/photo22.JPG" style="width:100%">
-	<img src="images/photoGallery/photo11.JPG" style="width:100%; height:170px; object-fit: cover;">	
+	<img src="images/photoGallery/photo11.JPG" style="width:100%";>
+	<img src="images/photoGallery/photo37.jpeg" style="width:100%";>
+	<img src="images/photoGallery/photo33.jpeg" style="width:100%">
+
       </div>
 
     </div>
