--- a/CS-II/Projects/ISP/Journal.html
+++ b/CS-II/Projects/ISP/Journal.html
@@ -79,7 +79,73 @@
 
       </div>
 
-            <div class="content">
+      <div class="content">
+	<div class="page">
+	  <p class="date"><b> 31-Mar-2023 </p></b>
+
+	  <h3> Technical Challenges </h3>
+
+	  <li> </li>
+	  <br>
+	  
+	  <h3> Scheduling Challenges</h3>
+	  <li> We have not been communicating much because we are all busy working on our own individual parts. </li>
+	  <br>
+
+	  <h3> Interpersonal Challenges </h3>
+	  <li> </li>
+	  <br>
+
+	</div>
+      </div>
+      <div class="content">
+	<div class="page">
+	  <p class="date"><b> 24-Mar-2023 </p></b>
+
+	  <h3> Technical Challenges </h3>
+
+	  <li> </li>
+	  <br>
+	  
+	  <h3> Scheduling Challenges</h3>
+	  <li> We have all been so busy we have not had much time to work on the project. </li>
+	  <br>
+
+	  <h3> Interpersonal Challenges </h3>
+	  <li> </li>
+	  <br>
+
+	</div>
+      </div>
+
+      <div class="content">
+	<div class="page">
+	  <p class="date"><b> 17-Mar-2023 </p></b>
+
+	  <h3> Technical Challenges </h3>
+
+	  <li> </li>
+	  <br>
+	  
+	  <h3> Scheduling Challenges</h3>
+	  <li> We are running a bit behind on scheduling. </li>
+	  <br>
+
+	  <h3> Interpersonal Challenges </h3>
+	  <li> </li>
+	  <br>
+
+	  
+	  <h3> Significant Acheivements </h3>
+
+	  <li><a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/blob/zoeCommits/ShelterSafe/ContentView.swift"> Changed Logo Labels </a></li>
+	  <li><a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/blob/zoeCommits/ShelterSafe/HomePageView.swift"> Created A Home Page </a></li>
+	  <li> Added in the App Icon  </li>
+
+	</div>
+      </div>
+
+      <div class="content">
 	<div class="page">
 	  <p class="date"><b> 13-Feb-2023 </p></b>
 
@@ -181,34 +247,34 @@
 	<div class="page">
 	  <p class="date"><b> 2-Jan-2023 </p></b>
 
-	    <h3>(Software) Development Engineer: </h3>
-	    <li> A software engineer would have to have a solid understanding of computer science. The software engineer&apos;s job would consist of developing the programs, debugging, and testing code. Personally, I would be able to learn and gain a better understanding of programming. If I am to do this job, I would have to do more learning and research in order to reach my fullest potential in this role. </li>
-	    <br>
-	    
-	    <h3> QA Engineer: </h3>
-	    <li> A QA Engineer is a Quality Assurance Engieer. They are in charge of testing code and finding bugs in the program. They make sure the end result meets the standards of the team and the users. I think I would do well in this role because the job does not seem difficult. The role requries someone who pays attention to details and is observant and attentive. </li>
-	    <br>
+	  <h3>(Software) Development Engineer: </h3>
+	  <li> A software engineer would have to have a solid understanding of computer science. The software engineer&apos;s job would consist of developing the programs, debugging, and testing code. Personally, I would be able to learn and gain a better understanding of programming. If I am to do this job, I would have to do more learning and research in order to reach my fullest potential in this role. </li>
+	  <br>
+	  
+	  <h3> QA Engineer: </h3>
+	  <li> A QA Engineer is a Quality Assurance Engieer. They are in charge of testing code and finding bugs in the program. They make sure the end result meets the standards of the team and the users. I think I would do well in this role because the job does not seem difficult. The role requries someone who pays attention to details and is observant and attentive. </li>
+	  <br>
 
-	    <h3> Project Manager: </h3>
-	    <li> The Project Manager is in charge of overseeing the whole operation and ensuring that everything is going according to plan. The manager consistently checks up on the team members and makes sure they are completing their tasks. The person in this role would require good communication skills and organization. I would be average in this role. I am organized and would be thorough when doing check ups. I don't find the role too complicated and think I would be decent at it. </li>
-	    <br>
+	  <h3> Project Manager: </h3>
+	  <li> The Project Manager is in charge of overseeing the whole operation and ensuring that everything is going according to plan. The manager consistently checks up on the team members and makes sure they are completing their tasks. The person in this role would require good communication skills and organization. I would be average in this role. I am organized and would be thorough when doing check ups. I don't find the role too complicated and think I would be decent at it. </li>
+	  <br>
 
-	    <h3> Product Manager: </h3>
-	    <li> The Product Manager is responsible for understanding what the customer&apos; want and need. The person would have to understand what success of the app looks like. I think I would do average in this role. I am able to understand how consumers think, as I am one myself, and I am able to see how succeful our app can become. </li>
-	    <br>
+	  <h3> Product Manager: </h3>
+	  <li> The Product Manager is responsible for understanding what the customer&apos; want and need. The person would have to understand what success of the app looks like. I think I would do average in this role. I am able to understand how consumers think, as I am one myself, and I am able to see how succeful our app can become. </li>
+	  <br>
 
-	    <h3> Release Engineer: </h3>
-	    <li> A Release Engineer is someone who makes sure that the programs are built and released without issues. They are the ones that link the different applications together through code. Similar to the QA engineer, release engineers make sure that the operation is meeting the standard of the team and the market. I would not know how to do this job, but I am able to learn how to. This role would give me the opportunity to deepen my understanding for programming. </li>
-	    <br>
+	  <h3> Release Engineer: </h3>
+	  <li> A Release Engineer is someone who makes sure that the programs are built and released without issues. They are the ones that link the different applications together through code. Similar to the QA engineer, release engineers make sure that the operation is meeting the standard of the team and the market. I would not know how to do this job, but I am able to learn how to. This role would give me the opportunity to deepen my understanding for programming. </li>
+	  <br>
 
 	</div>
       </div>
 
-	
-    <a class="back" href = "index.html" target="_blank"> Back </a>
+      
+      <a class="back" href = "index.html" target="_blank"> Back </a>
 
   </body>
 
 </html>
 
-  
+
