New Journal Entries

--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@
 	<img src="images/photoGallery/photo38.jpeg" style="width:100%">
 	<img src="images/photoGallery/photo34.jpeg" style="width:100%">
 	<img src="images/photoGallery/photo36.jpeg" style="width:100%">
+	<img src="images/photoGallery/photo42.jpg" style="width:100%">
+	<img src="images/photoGallery/photo44.jpg" style="width:100%">
+	<img src="images/photoGallery/photo50.png" style="width:100%">
+	<img src="images/photoGallery/photo51.png" style="width:100%">
+	
       </div>
 
       <div class="column">
@@ -182,7 +187,12 @@
 	<img src="images/photoGallery/photo10.JPG" style="width:100%">
 	<img src="images/photoGallery/photo13.jpg" style="width:100%">
 	<img src="images/photoGallery/photo35.jpeg" style="width:100%">
+	<img src="images/photoGallery/photo43.jpg" style="width:100%">
 	<img src="images/photoGallery/photo39.jpg" style="width:100%">
+	<img src="images/photoGallery/photo40.jpg" style="width:100%">
+	<img src="images/photoGallery/photo46.png" style="width:100%">
+	<img src="images/photoGallery/photo47.png" style="width:100%">
+
       </div>
 
       <div class="column">
@@ -198,7 +208,11 @@
 	<img src="images/photoGallery/photo11.JPG" style="width:100%";>
 	<img src="images/photoGallery/photo37.jpeg" style="width:100%";>
 	<img src="images/photoGallery/photo33.jpeg" style="width:100%">
-
+	<img src="images/photoGallery/photo45.jpg" style="width:100%">
+	<img src="images/photoGallery/photo41.jpg" style="width:100%">
+	<img src="images/photoGallery/photo48.png" style="width:100%">
+	<img src="images/photoGallery/photo49.png" style="width:100%">
+	
       </div>
 
     </div>
