--- a/CS-II/Projects/ISP/Journal.html
+++ b/CS-II/Projects/ISP/Journal.html
@@ -1,3 +1,4 @@
+
 <html>
   <head>
 
@@ -79,6 +80,71 @@
 
     </div>
 
+    <div class="content">
+      <div class="page">
+	<p class="date"><b> 1-May-2023 </p></b>
+
+	<h3> Plans </h3>
+
+	<li> I plan to work on adding more to the final presentation and adding a default text on the weather watch page. </li>
+	<li> Implement: <a href="https://github.com/users/CSAllenISD/projects/1/views/33?pane=issue&itemId=27177176"> Issue #92 </a></li>
+	<li> Implement: <a href="https://github.com/users/CSAllenISD/projects/1/views/33?pane=issue&itemId=26328714"> Issue #82 </a></li>
+	<br>
+	
+	<h3> Challenges</h3>
+	<li> I was unable to implement the data into the createShelterPage so another group memember is now working on that. Instead I worked on adding a default text into the weather watch page when there is no active disaster.
+	  <br>
+	  
+	  <h3> Significant Acheivements </h3>
+
+	<li> I added more the final presenation. </li>
+	<a href="https://docs.google.com/presentation/d/1Oov0gkJ89We4BTX52qqigausdZnzwcl-23ouQjN_Bus/edit?usp=sharing"> <img class="image" src="../../../images/finalPresSS.png" alt="Final Pres Screen Shot" width="700"> </a>
+
+
+	<li> I added a default text to show when there is no current disaster. </li>
+	<a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/main...zoeCommits3"> <img class="image" src="../../../images/weatherWatch.png" alt="Weather Watch Page" height="600"> </a>
+	
+      </div>
+    </div>
+
+
+        <div class="content">
+      <div class="page">
+	<p class="date"><b> 24-Apr-2023 </p></b>
+
+	<h3> Plans </h3>
+
+	<li> I plan to work on adding more to the final presentation and finding a way to save the data that is input into the createShelterView. I also plan to create a layout for the settings page. </li>
+	<li> Implement: <a href="https://github.com/users/CSAllenISD/projects/1/views/33?pane=issue&itemId=26216392"> Issue #81 </a></li>
+	<li> Implement: <a href="https://github.com/users/CSAllenISD/projects/1/views/33?pane=issue&itemId=26328714"> Issue #82 </a></li>
+	<li> Implement: <a href="https://github.com/users/CSAllenISD/projects/1/views/33?pane=issue&itemId=27177135"> Issue #91 </a></li>
+	
+	<br>
+	
+	<h3> Challenges</h3>
+	<li> I was having trouble with changing the color of the cursor. The mouse cursor in the textfields would default to yellow and when I would try to change it, it wouldn&apos;t work. I was able to figure it out and change the cursor to the accent color. </li>
+	<br>
+
+	<h3> Gannt Chart </h3>
+	<li> <a href="https://docs.google.com/spreadsheets/d/1W7Ev7sILKel3jZRJhqZV8suQq4H8AivgBlL0JNNtRbY/edit?usp=sharing"> Gannt Chart </a> </li>
+	
+	<h3> Significant Acheivements </h3>
+	<li> I was able to add in the code slides and some more information into the slides. </li>
+	<a href="https://docs.google.com/presentation/d/1Oov0gkJ89We4BTX52qqigausdZnzwcl-23ouQjN_Bus/edit?usp=sharing"> <img class="image" src="../../../images/finalPresSS.png" alt="Final Pres Screen Shot" width="700"> </a>
+
+	 <li> I changed the createShelterView to display the shelter and made it be connected to the login page. </li>
+	 <a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/main...zoeCommits3"> <img class="image" src="../../../images/createNewShelterView.png" alt="Creater Shelter View page" height="600"> </a>
+
+	<li> This is what it looks like after create shelter button is clicked and the user&apos;s input is put in. </li>
+	 <a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/main...zoeCommits3"> <img class="image" src="../../../images/shelterCard.png" alt="Shelter Card" height="600"> </a>
+
+	<li> I created an empty settings page. </li>
+	 <a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/main...zoeCommits3"> <img class="image" src="../../../images/settings.png" alt="Settings Page" height="600"> </a>
+	 
+	
+      </div>
+    </div>
+
     
     <div class="content">
       <div class="page">
@@ -88,7 +154,7 @@
 
 	<li> I plan to work on the final presentation as well as creating a function that creates a new shelter object from users input. </li>
 	<li> Implement: <a href="https://github.com/users/CSAllenISD/projects/1/views/33?pane=issue&itemId=26216392"> Issue #81 </a></li>
-	<li> Implement: <a href="https://github.com/users/CSAllenISD/projects/1/views/33?pane=issue&itemId=25991385"> Issue #79 </a></li>
+	<li> Implement: <a href="https://github.com/users/CSAllenISD/projects/1/views/33?pane=issue&itemId=26328714"> Issue #82 </a></li>
 	<br>
 	
 	<h3> Challenges</h3>
@@ -97,10 +163,10 @@
 	
 	<h3> Significant Acheivements </h3>
 	<li> I was able to start the final presentation and have set up the template for what we need to add into the presentation. </li>
-	<img class="image" src="../../../images/finalPresentationSS.png" alt="Final Pres Screen Shot" width="700"> 
+	<a href="https://docs.google.com/presentation/d/1Oov0gkJ89We4BTX52qqigausdZnzwcl-23ouQjN_Bus/edit?usp=sharing"> <img class="image" src="../../../images/finalPresentationSS.png" alt="Final Pres Screen Shot" width="700"> </a>
 
 	 <li> This picture shows the paramaters we have created for the object which will create a shelter. </li>
-	<img class="image" src="../../../images/codeEvidenceSS.png" alt="Code Screen Shot" width="700"> 
+		<a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/zoeCommits2...main"> <img class="image" src="../../../images/codeEvidenceSS.png" alt="Code Screen Shot" width="700"> </a>
 	
 	
       </div>
