--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       <div class="container">
 	<a href = "aboutMe.html" class="links" target="_blank"> About Me </a>	<a href = "whyImportant.html" class="links" target="_blank"> Importance of My Digital Portfolio </a>
 	<a href = "classes.html" class="links" target="_blank"> Classes </a> 
-
+	<a href = "blogs.html" class="links" target="_blank"> Blogs </a> 	
 	<button class="dropdownBtn"> CS-I </button>
 	<div class="smallTab">
 	  <a href = "ISP.html" class="links" target="_blank"> CS-I ISP </a>
