Changes to index.html

--- a/CS-II/Projects/ISP/Journal.html
+++ b/CS-II/Projects/ISP/Journal.html
@@ -68,6 +68,13 @@
 	  padding: 10px;
       }
 
+      .sideText {
+	  text-align: right;
+	  padding: 10px;
+	  color: #38C6BD;
+	  font-size: 17px;
+      }
+
     </style>
     
   </head>
@@ -92,17 +99,19 @@
 	<br>
 	
 	<h3> Challenges</h3>
-	<li> I was unable to implement the data into the createShelterPage so another group memember is now working on that. Instead I worked on adding a default text into the weather watch page when there is no active disaster.
+	<li> I was unable to implement the data into the createShelterPage so another group memember is now working on that. Instead I worked on adding a default text into the weather watch page when there is no active disaster. Throughout this whole project I have had trouble with pushing/pulling to github. Every time I try to push it won&apos;t let me and every time I try to pull it won&apos;t let me. To get around this I have had to delete and re-clone the project and the release engineer has had to create multiple branches for me to push too. 
 	  <br>
 	  
 	  <h3> Significant Acheivements </h3>
 
-	<li> I added more the final presenation. </li>
-	<a href="https://docs.google.com/presentation/d/1Oov0gkJ89We4BTX52qqigausdZnzwcl-23ouQjN_Bus/edit?usp=sharing"> <img class="image" src="../../../images/finalPresSS.png" alt="Final Pres Screen Shot" width="700"> </a>
+	  <p class="sideText"> *Click the images!* </p>
+
+	<li> I added the screenshots of the finished app into the final presenation. </li>
+	<a href="https://docs.google.com/presentation/d/1Oov0gkJ89We4BTX52qqigausdZnzwcl-23ouQjN_Bus/edit?usp=sharing"> <img class="image" src="../../../images/ShelterSafe/presSS.png" alt="Final Pres Screen Shot" width="700"> </a>
 
 
 	<li> I added a default text to show when there is no current disaster. </li>
-	<a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/main...zoeCommits3"> <img class="image" src="../../../images/weatherWatch.png" alt="Weather Watch Page" height="600"> </a>
+	<a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/main...zoeCommits3"> <img class="image" src="../../../images/ShelterSafe/weatherWatch.PNG" alt="Weather Watch Page" height="600"> </a>
 	
       </div>
     </div>
@@ -129,21 +138,24 @@
 	<li> <a href="https://docs.google.com/spreadsheets/d/1W7Ev7sILKel3jZRJhqZV8suQq4H8AivgBlL0JNNtRbY/edit?usp=sharing"> Gannt Chart </a> </li>
 	
 	<h3> Significant Acheivements </h3>
+
+	<p class="sideText"> *Click the images!* </p>
+	
 	<li> I was able to add in the code slides and some more information into the slides. </li>
-	<a href="https://docs.google.com/presentation/d/1Oov0gkJ89We4BTX52qqigausdZnzwcl-23ouQjN_Bus/edit?usp=sharing"> <img class="image" src="../../../images/finalPresSS.png" alt="Final Pres Screen Shot" width="700"> </a>
+	<a href="https://docs.google.com/presentation/d/1Oov0gkJ89We4BTX52qqigausdZnzwcl-23ouQjN_Bus/edit?usp=sharing"> <img class="image" src="../../../images/ShelterSafe/finalPresSS.png" alt="Final Pres Screen Shot" width="700"> </a>
 
 	 <li> I changed the createShelterView to display the shelter and made it be connected to the login page. </li>
-	 <a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/main...zoeCommits3"> <img class="image" src="../../../images/createNewShelterView.png" alt="Creater Shelter View page" height="600"> </a>
+	 <a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/main...zoeCommits3"> <img class="image" src="../../../images/ShelterSafe/createNewShelterView.png" alt="Creater Shelter View page" height="600"> </a>
 
 	<li> This is what it looks like after create shelter button is clicked and the user&apos;s input is put in. </li>
-	 <a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/main...zoeCommits3"> <img class="image" src="../../../images/shelterCard.png" alt="Shelter Card" height="600"> </a>
+	 <a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/main...zoeCommits3"> <img class="image" src="../../../images/ShelterSafe/shelterCard.png" alt="Shelter Card" height="600"> </a>
 
 	<li> I created an empty settings page. </li>
-	 <a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/main...zoeCommits3"> <img class="image" src="../../../images/settings.png" alt="Settings Page" height="600"> </a>
+	 <a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/main...zoeCommits3"> <img class="image" src="../../../images/ShelterSafe/settings.png" alt="Settings Page" height="600"> </a>
 	 
 	
       </div>
-    </div>
+    </div>p
 
     
     <div class="content">
@@ -162,11 +174,14 @@
 	<br>
 	
 	<h3> Significant Acheivements </h3>
+
+	<p class="sideText"> *Click the images!* </p>
+	
 	<li> I was able to start the final presentation and have set up the template for what we need to add into the presentation. </li>
-	<a href="https://docs.google.com/presentation/d/1Oov0gkJ89We4BTX52qqigausdZnzwcl-23ouQjN_Bus/edit?usp=sharing"> <img class="image" src="../../../images/finalPresentationSS.png" alt="Final Pres Screen Shot" width="700"> </a>
+	<a href="https://docs.google.com/presentation/d/1Oov0gkJ89We4BTX52qqigausdZnzwcl-23ouQjN_Bus/edit?usp=sharing"> <img class="image" src="../../../images/ShelterSafe/finalPresentationSS.png" alt="Final Pres Screen Shot" width="700"> </a>
 
 	 <li> This picture shows the paramaters we have created for the object which will create a shelter. </li>
-		<a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/zoeCommits2...main"> <img class="image" src="../../../images/codeEvidenceSS.png" alt="Code Screen Shot" width="700"> </a>
+		<a href="https://github.com/CSAllenISD/2023-ISP-ShelterSafe/compare/zoeCommits2...main"> <img class="image" src="../../../images/ShelterSafe/codeEvidenceSS.png" alt="Code Screen Shot" width="700"> </a>
 	
 	
       </div>
