--- a/blogs.html
+++ b/blogs.html
@@ -13,7 +13,7 @@
 
       #body {
 
-	  background: #D46A6A;
+	  background: #ffbfbf;;
 	  padding: 0;
 	  margin: 0;
       }
@@ -21,7 +21,6 @@
       .header {
 	  background:  #FFA1A7;
 	  height: 130px;
-	  
       }
 
       #title {
@@ -36,7 +35,7 @@
 
 
       .content {
-	  border: 4px solid #ffbfbf;
+	  border: 4px solid #D46A6A;
       }
       
       .page {
@@ -75,14 +74,14 @@
       <div class="header">
 
 	<h1 id="title"> B L O G S </h1>
-
+	
       </div>
 
       <div class="content">
 	<div class="page">
 	  <h1 class="date"><b> 2-May-2023: BYOD No More </h1></b>
 
-	    <p> It is ureasonable to get rid of the BYOD network is useless. Without that network kids will just move to the guest wifi. The wifi is already very slow and that's with thousands of people using 3 different networks. Further more the chrome books that the school provides with us barely work and take a veru long time to load. </p>
+	    <p> It is ureasonable to get rid of the BYOD network. Without that network kids will just move to the guest wifi and overcrowd it. The wifi is already very slow and that will only get worse if everyone has to switch to one network. The chrome books that the school provides with us barely work and take a very long time to load. It is much more functional and helpful to use my own device. Requiring us to move over also feels like an invasion of privacy. </p> 
 
 	</div>
       </div>
